--- a/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
+++ b/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
@@ -34,7 +34,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlN-dq-lcz">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlN-dq-lcz">
                         <rect key="frame" x="16" y="16" width="72" height="72"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="72" id="bHw-1p-5iP"/>
