--- a/pppppp/View/TimelineView/TimelineView/TimeLineView.storyboard
+++ b/pppppp/View/TimelineView/TimelineView/TimeLineView.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HWL-JB-unQ">
-                                <rect key="frame" x="0.0" y="91" width="390" height="674"/>
+                                <rect key="frame" x="0.0" y="143" width="390" height="622"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3Pt-ym-5fh">
                                     <size key="itemSize" width="128" height="128"/>
@@ -50,6 +50,9 @@
                     <navigationItem key="navigationItem" title="Timeline" id="kig-hb-FHE">
                         <barButtonItem key="rightBarButtonItem" image="bell.badge" catalog="system" id="Qt6-KR-X5W">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="bellButton" destination="Y6W-OH-hqX" id="6aq-zB-Ekx"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
