--- a/pppppp/View/TimelineView/TimelineNotificationView/TimelineNotificationView.storyboard
+++ b/pppppp/View/TimelineView/TimelineNotificationView/TimelineNotificationView.storyboard
@@ -7,17 +7,87 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="F5.6-Regular.otf">
+            <string>F5.6-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Timeline Notification View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="TimelineNotificationViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKi-VY-f8Q">
+                                <rect key="frame" x="336.33333333333331" y="71" width="29.666666666666686" height="14"/>
+                                <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="12"/>
+                                <color key="textColor" name="white50"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qww-1d-LMJ">
+                                <rect key="frame" x="119.99999999999999" y="71" width="51.333333333333329" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SCM-b5-YE5">
+                                <rect key="frame" x="24" y="71" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="ID3-Z4-gk9"/>
+                                    <constraint firstAttribute="height" constant="72" id="fsq-br-n5Q"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpD-yJ-fAr">
+                                <rect key="frame" x="253" y="118.99999999999999" width="49" height="24.333333333333329"/>
+                                <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZx-NC-vdg">
+                                <rect key="frame" x="120" y="119" width="49" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KHK-1Z-pLW">
+                                <rect key="frame" x="342" y="119" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="GUI-7g-zEP"/>
+                                    <constraint firstAttribute="width" constant="24" id="uoE-XB-aGi"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="mainColor"/>
+                        <constraints>
+                            <constraint firstItem="SCM-b5-YE5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="24" id="2rQ-gl-YYa"/>
+                            <constraint firstItem="LZx-NC-vdg" firstAttribute="top" secondItem="Qww-1d-LMJ" secondAttribute="bottom" constant="24" id="3ww-dT-sQU"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KHK-1Z-pLW" secondAttribute="trailing" constant="24" id="6uS-Rn-45o"/>
+                            <constraint firstItem="hKi-VY-f8Q" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="24" id="C0Z-e8-fLa"/>
+                            <constraint firstItem="LZx-NC-vdg" firstAttribute="centerY" secondItem="dpD-yJ-fAr" secondAttribute="centerY" id="IIs-dT-Tcq"/>
+                            <constraint firstItem="dpD-yJ-fAr" firstAttribute="centerY" secondItem="KHK-1Z-pLW" secondAttribute="centerY" id="N8t-ms-kuG"/>
+                            <constraint firstItem="LZx-NC-vdg" firstAttribute="leading" secondItem="SCM-b5-YE5" secondAttribute="trailing" constant="24" id="O9c-LO-gjC"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hKi-VY-f8Q" secondAttribute="trailing" constant="24" id="kpW-zZ-3ky"/>
+                            <constraint firstItem="SCM-b5-YE5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="q7W-rE-gjq"/>
+                            <constraint firstItem="Qww-1d-LMJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="24" id="sI3-gt-XIr"/>
+                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="leading" secondItem="dpD-yJ-fAr" secondAttribute="trailing" constant="40" id="tFV-vt-HKh"/>
+                            <constraint firstItem="Qww-1d-LMJ" firstAttribute="leading" secondItem="SCM-b5-YE5" secondAttribute="trailing" constant="24" id="xO9-0u-jiM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityLabel" destination="LZx-NC-vdg" id="Ufb-Pv-bai"/>
+                        <outlet property="dateLabel" destination="hKi-VY-f8Q" id="ajT-1g-akD"/>
+                        <outlet property="pointLabel" destination="dpD-yJ-fAr" id="It5-qr-XJI"/>
+                        <outlet property="userIconImageView" destination="SCM-b5-YE5" id="w6a-Ce-cUi"/>
+                        <outlet property="userNameLabel" destination="Qww-1d-LMJ" id="jmN-Jh-IjY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,8 +95,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <namedColor name="mainColor">
             <color red="0.071000002324581146" green="0.0" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="white50">
+            <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
