--- a/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
+++ b/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
@@ -42,7 +42,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZW-UM-4eA">
-                        <rect key="frame" x="218.66666666666666" y="63.666666666666664" width="67.333333333333343" height="24.333333333333336"/>
+                        <rect key="frame" x="206.66666666666666" y="63.666666666666664" width="67.333333333333343" height="24.333333333333336"/>
                         <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="20"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -54,7 +54,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NmF-c3-SC5">
-                        <rect key="frame" x="326" y="64" width="24" height="24"/>
+                        <rect key="frame" x="314" y="64" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="MMY-u2-1eh"/>
                             <constraint firstAttribute="height" constant="24" id="m4e-py-5jB"/>
@@ -74,12 +74,18 @@
                             <constraint firstAttribute="height" constant="1" id="fQa-Wg-k69"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8W-xA-pNZ">
+                        <rect key="frame" x="340" y="66" width="10" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" name="mainColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="NmF-c3-SC5" secondAttribute="trailing" constant="16" id="32e-62-6No"/>
+                <constraint firstItem="Q8W-xA-pNZ" firstAttribute="leading" secondItem="NmF-c3-SC5" secondAttribute="trailing" constant="2" id="53F-gD-mx7"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5f7-EI-5ND"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="9xf-zp-CZz"/>
                 <constraint firstItem="NmF-c3-SC5" firstAttribute="leading" secondItem="hZW-UM-4eA" secondAttribute="trailing" constant="40" id="BW9-tK-IJv"/>
@@ -87,12 +93,14 @@
                 <constraint firstItem="HPm-nM-2Z8" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="24" id="LfP-sO-cGj"/>
                 <constraint firstItem="N7K-qn-CU9" firstAttribute="centerY" secondItem="hZW-UM-4eA" secondAttribute="centerY" id="Nqq-Ua-PiG"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="OFv-Jj-dN0"/>
+                <constraint firstAttribute="trailing" secondItem="Q8W-xA-pNZ" secondAttribute="trailing" constant="16" id="PVZ-Ex-JFI"/>
                 <constraint firstAttribute="trailing" secondItem="qvb-BC-HpF" secondAttribute="trailing" id="WNC-0u-lVy"/>
                 <constraint firstItem="N7K-qn-CU9" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="24" id="afq-2s-bvK"/>
                 <constraint firstAttribute="bottom" secondItem="qvb-BC-HpF" secondAttribute="bottom" id="dpt-tU-s7j"/>
                 <constraint firstAttribute="bottom" secondItem="hZW-UM-4eA" secondAttribute="bottom" constant="16" id="e60-n4-aGv"/>
                 <constraint firstItem="qvb-BC-HpF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gOc-pb-IgC"/>
                 <constraint firstAttribute="trailing" secondItem="mph-eG-fuZ" secondAttribute="trailing" constant="16" id="kck-Wf-tl2"/>
+                <constraint firstItem="NmF-c3-SC5" firstAttribute="centerY" secondItem="Q8W-xA-pNZ" secondAttribute="centerY" id="oaM-cN-dWN"/>
                 <constraint firstItem="HPm-nM-2Z8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="u6T-GK-kGR"/>
                 <constraint firstAttribute="bottom" secondItem="NmF-c3-SC5" secondAttribute="bottom" constant="16" id="zle-uz-BoL"/>
             </constraints>
@@ -101,6 +109,7 @@
                 <outlet property="activityLabel" destination="N7K-qn-CU9" id="4kl-xn-7xa"/>
                 <outlet property="dateLabel" destination="mph-eG-fuZ" id="9co-c4-VEB"/>
                 <outlet property="goodButton" destination="NmF-c3-SC5" id="HXF-mz-UBc"/>
+                <outlet property="likeFriendCountLabel" destination="Q8W-xA-pNZ" id="Vef-h7-Jyu"/>
                 <outlet property="pointLabel" destination="hZW-UM-4eA" id="YLT-qG-ldj"/>
                 <outlet property="userIconImageView" destination="NlN-dq-lcz" id="HJz-EA-o8n"/>
                 <outlet property="userNameLabel" destination="HPm-nM-2Z8" id="Hpo-WH-gCf"/>
@@ -112,9 +121,6 @@
         <image name="heart" catalog="system" width="128" height="107"/>
         <namedColor name="lightBlue25">
             <color red="0.72200000286102295" green="0.91399997472763062" blue="1" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="mainColor">
-            <color red="0.071000002324581146" green="0.0" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="white50">
             <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
