いいねした人が見えるように

--- a/pppppp/View/TimelineView/TimelineNotificationViewCell/TimelineNotificationViewCell.xib
+++ b/pppppp/View/TimelineView/TimelineNotificationViewCell/TimelineNotificationViewCell.xib
@@ -16,18 +16,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="330" height="70"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jtp-nu-Wuy">
-                        <rect key="frame" x="149" y="25" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zH1-p3-4EA">
+                        <rect key="frame" x="16" y="3" width="64" height="64"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="64" id="Tbs-tZ-5Ca"/>
+                            <constraint firstAttribute="height" constant="64" id="jEJ-x8-ZrC"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jtp-nu-Wuy">
+                        <rect key="frame" x="96" y="35" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="zH1-p3-4EA" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="U26-U9-dem"/>
+                <constraint firstItem="Jtp-nu-Wuy" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="ZHP-NG-9Kz"/>
+                <constraint firstItem="Jtp-nu-Wuy" firstAttribute="leading" secondItem="zH1-p3-4EA" secondAttribute="trailing" constant="16" id="rW1-tX-rGs"/>
+                <constraint firstItem="zH1-p3-4EA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="sja-7t-qbB"/>
+            </constraints>
             <size key="customSize" width="330" height="70"/>
             <connections>
+                <outlet property="friendIconView" destination="zH1-p3-4EA" id="GG5-Fu-h9C"/>
                 <outlet property="friendNameLabel" destination="Jtp-nu-Wuy" id="3bz-PV-IEb"/>
             </connections>
             <point key="canvasLocation" x="286.15384615384613" y="22.748815165876778"/>
